<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.theah64.coinhivesdkandroidexample.activities.MainActivity">

    <Button
        android:id="@+id/bSimpleActivityExample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Simple_Activity_Example" />

    <Button
        android:id="@+id/bFragmentExample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Fragment_Example" />


    <Button
        android:id="@+id/bCustomActivityExample"
        android:layout_width="match_parent"
        android:text="@string/Custom_Activity_Example"
        android:layout_height="wrap_content" />

</LinearLayout>
